--- a/index.html
+++ b/index.html
@@ -4,21 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- BS5 Stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>MyMovieList</title>
 </head>
 <body>
+    <h1>Welcome to MyMovieList!</h1>
+    <h3>Where everyone's a critic!</h3>
+    <!-- Adding movies -->
     <fieldset id="usersReview">
         <legend>Add a movie</legend>
        <label for="movieTitle"> Movie Title:</label> 
         <input name="movieTitle" id="movieTitle" />
-
+        <br>
+        <hr>
+        <br>
         <label for="yearReleased">Year Released:</label>
         <input name="yearReleased" id="yearReleased" />
-
+        <br>
+        <hr>
+        <br>
          <label for="userRating">Rating (1-5):</label>
         <input name="userRating" id="userRating" />
-          <br>
-        <input type="submit" value="Submit" onclick="addMovie()">
+        <br>
+        <hr>
+        <br>
+        <input type="submit" value="Add Movie" onclick="addMovie()">
     </fieldset>
+    <br> 
+    <!-- Show movies -->
+    <input type="button" value="Show Movies" onclick="showMovies()">
+    <textarea rows="10" cols="60" id="show"></textarea>
+    <!-- BS5 Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 </html>
