--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 <br>
                 <hr>
                 <br>
-            <input class="btn btn-primary" type="submit" value="Add Movie" onclick="addMovie()">
+            <input class="btn btn-primary" type="submit" value="Add Movie" onclick="addMovie();">
     </fieldset>
     <br> 
     <!-- Show movies -->
     <legend class="text-center">Movies List</legend>
-    <input class="btn btn-primary" type="button" value="Show Movies" onclick="showMovies()"> <br>
+    <input class="btn btn-primary" type="button" value="Show Movies" onclick="showMovie();"> <br>
     <textarea rows="10" cols="60" id="show"></textarea>
     <!-- BS5 Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
