--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="styles.css">
     <title>MyMovieList</title>
 </head>
-<body class="text-primary">
-    <div class="mt-4 p-5 rounded text-center">
+<body class="text-primary text-center">
+    <div class="mt-4 p-5 rounded">
         <h1>Welcome to MyMovieList!</h1>
         <h3>Where everyone's a critic!</h3>
-      </div>
+    </div>
     <!-- Adding movies -->
     <fieldset id="usersReview">
-        <legend class="text-center">Add a movie</legend>
+        <legend>Add a movie</legend>
             <label for="movieTitle"> Movie Title:</label> 
                 <br>
             <input name="movieTitle" id="movieTitle" />
@@ -39,9 +39,11 @@
             <input class="btn btn-primary" type="submit" value="Add Movie" onclick="addMovie();">
     </fieldset>
     <br> 
+    <br>
     <!-- Show movies -->
-    <legend class="text-center">Movies List</legend>
+    <legend>Movies List</legend>
     <input class="btn btn-primary" type="button" value="Show Movies" onclick="showMovie();"> <br>
+    <br>
     <textarea rows="10" cols="60" id="show"></textarea>
     <!-- BS5 Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
