Minor HTML formatting

--- a/index.html
+++ b/index.html
@@ -22,29 +22,22 @@
             <label for="title"> Movie Title:</label> 
                 <br>
             <input name="title" id="title" />
-                <br>
-                <hr>
-                <br>
+                <br><hr><br>
             <label for="year">Year Released:</label> 
                 <br>
             <input name="year" id="year" /> 
-                <br>
-                <hr>
-                <br>
+                <br><hr><br>
             <label for="rating">Rating (1-5):</label> 
                 <br>
             <input name="rating" id="rating" /> 
-                <br>
-                <hr>
-                <br>
+                <br><hr><br>
             <input class="btn btn-primary" type="submit" value="Add Movie" onclick="addMovie();">
     </fieldset>
-    <br> 
-    <br>
+    <br><br>
     <!-- Show movies -->
     <legend>Movies List</legend>
-    <button class="btn btn-primary" type="button" value="Show Movies" onclick="showMovie();">Show Movies</button> <br>
-    <br>
+    <input class="btn btn-primary" type="submit" value="Show Movies" onclick="showMovie();"> 
+    <br><br>
     <textarea rows="10" cols="25" id="show"></textarea>
     <!-- BS5 Script -->
     </form>
