--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Welcome to MyMovieList!</h1>
         <h5>Where everyone's a critic!</h5>
     </div>
-    <form>
+    <form onsubmit="return false">
     <!-- Adding movies -->
     <fieldset id="usersReview">
         <legend>Add a movie</legend>
@@ -34,13 +34,13 @@
             <input class="btn btn-primary" type="submit" value="Add Movie" onclick="addMovie();">
     </fieldset>
     <br><br>
+    </form>
     <!-- Show movies -->
     <legend>Movies List</legend>
     <input class="btn btn-primary" type="submit" value="Show Movies" onclick="showMovie();"> 
     <br><br>
     <textarea rows="10" cols="25" id="show"></textarea>
     <!-- BS5 Script -->
-    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
