Worked on the validation and made the fields blank for the user to add in ten flicks

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <form onsubmit="return false">
     <!-- Adding movies -->
     <fieldset id="usersReview">
-        <legend>Add a movie</legend>
-            <label for="title"> Movie Title:</label> 
+        <legend>Add up to ten movies to your list!</legend>
+            <label for="title">Title:</label> 
                 <br>
             <input name="title" id="title" />
                 <br><hr><br>
@@ -39,7 +39,7 @@
     <legend>Movies List</legend>
     <input class="btn btn-primary" type="submit" value="Show Movies" onclick="showMovie();"> 
     <br><br>
-    <textarea rows="10" cols="25" id="show"></textarea>
+    <textarea rows="20" cols="50" id="show"></textarea>
     <!-- BS5 Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="main.js"></script>
