Added in the finishing touches

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <legend>Movies List</legend>
         <input class="btn btn-primary" type="submit" value="Show Movies" onclick="showMovie();"> 
         <br><br>
-        <textarea rows="20" cols="35" id="show"></textarea>
+        <textarea class="text-center" readonly rows="20" cols="35" id="show"></textarea>
     </section>
     <footer>
         <div class="text-center text-primary p-3">
